<resources>
    <string name="app_name">Product Finding</string>
    <!--Error Text-->
    <string name="err_field_required">This Field is Required</string>
    <string name="err_wrong_email_format">Wrong Email Format</string>
    <string name="err_password_length">Password Require at least 6 Character</string>
    <string name="err_repassword">Password Not Match</string>

    <!--Activity Title-->
    <string name="title_activity_login">Login</string>
    <!--Bottom Navigation Text-->
    <string name="bottom_navigation_title_login">Login</string>
    <string name="bottom_navigation_title_register">Register</string>
    <string name="bottom_navigation_title_forget_password">Forget Password</string>

    <!--Login Fragment Text-->
    <string name="txt_email_address">Email Address</string>
    <string name="txt_password">Password (At Least 6 Character)</string>
    <string name="txt_login">Login</string>
    <string name="txt_register">Register</string>
    <string name="txt_reset_password">Reset Password</string>
    <string name="txt_name">Name</string>

    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_manage_shop">Manage Shop</string>
    <string name="txt_map">Map</string>
    <string name="txt_history">History</string>
    <string name="txt_setting">Setting</string>
    <string name="txt_add_item">Add New Item</string>
    <string name="txt_utilities">Utilities</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search...</string>
    <string name="logo">logo</string>

    <!--share preference-->
    <string name="share_preference_current_user">UserSharedPreference</string>

    <!--URL-->
    <string name="url_user">http://kvinltf.me/productfinding/android/user.php</string>
    <string name="url_shop">http://kvinltf.me/productfinding/android/shop.php</string>
    <string name="url_catalog">http://kvinltf.me/productfinding/android/catalog.php</string>
    <string name="url_brand">http://kvinltf.me/productfinding/android/brand.php</string>
    <string name="url_category">http://kvinltf.me/productfinding/android/category.php</string>
    <string name="url_item">http://kvinltf.me/productfinding/android/item.php</string>
    <string name="url_shop_owner">http://kvinltf.me/productfinding/android/shop_owner.php</string>
    <string name="remember_me">Remember Me</string>
    <string name="retype_the_password">Retype the password</string>
    <string name="sort">Sort</string>
</resources>
