<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/txt_profile" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/txt_map" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/txt_history" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/txt_setting" />
        <item
            android:id="@+id/nav_add_item"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/txt_add_item" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_icons_logout"
            android:title="@string/txt_logout" />

    </group>
</menu>
